--- a/src/libraries/System.Private.CoreLib/generators/System.Private.CoreLib.Generators.csproj
+++ b/src/libraries/System.Private.CoreLib/generators/System.Private.CoreLib.Generators.csproj
@@ -10,13 +10,16 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp" PrivateAssets="all" Version="$(MicrosoftCodeAnalysisCSharpVersion)" />
   </ItemGroup>
-
   <ItemGroup>
     <Compile Include="$(LibrariesProjectRoot)\System.Private.CoreLib\generators\EventSourceGenerator.cs" />
     <Compile Include="$(LibrariesProjectRoot)\System.Private.CoreLib\generators\EventSourceGenerator.Emitter.cs" />
     <Compile Include="$(LibrariesProjectRoot)\System.Private.CoreLib\generators\EventSourceGenerator.Parser.cs" />
     <Compile Include="$(LibrariesProjectRoot)\System.Private.CoreLib\generators\ManifestBuilder.cs" />
     <Compile Include="$(LibrariesProjectRoot)\System.Private.CoreLib\generators\EventDataBuilder.cs" />
+    <Compile Include="$(LibrariesProjectRoot)\System.Private.CoreLib\generators\SimpleTypeInfos.cs" />
+    <Compile Include="$(LibrariesProjectRoot)\System.Private.CoreLib\generators\TraceLoggingTypeInfo.cs" />
     <Compile Include="$(CoreLibSharedDir)System\Diagnostics\CodeAnalysis\UnconditionalSuppressMessageAttribute.cs" />
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+
   </ItemGroup>
 </Project>
